fixed some layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -82,13 +82,22 @@ body{
   flex-wrap: wrap;
 }
 
-.meals-wrapper > *{
-  flex-basis: 48%;
-}
+
 
 .meal-wrapper{
   display: flex;
+  flex-direction: column;
   gap: 1rem;
+}
+
+@media only screen and (min-width:768px){
+  .meals-wrapper > *{
+    flex-basis: 48%;
+  }
+
+  .meal-wrapper{
+    flex-direction: row;
+  }
 }
 
 img{
@@ -101,10 +110,16 @@ img{
 }
 
 .img-wrapper{
-  height: 150px;
+  height: 200px;
   flex-basis: 40%;
   border: 4.5px solid var(--primary);
   border-radius: 5px;
+}
+
+@media screen and (min-width:768px) {
+  .img-wrapper{
+    height: 150px;
+  }
 }
 
 .meal-info{
